<resources>
    <string name="app_name">Workmate Admin</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Login</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="login">Login</string>
    <string name="passwordhint">Write the password</string>
    <string name="incorrectpass">Incorrect password</string>
    <string name="users">Users</string>
    <string name="companies">Companies</string>
    <string name="insertname">Insert the name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remove">Remove</string>
    <string name="usernotfound">User not found</string>
    <string name="user">User</string>
    <string name="usernamecode">Username code</string>
    <string name="id">Id</string>
    <string name="email">Email</string>
    <string name="seeimages">See images</string>
    <string name="company">Company</string>
    <string name="images">Images</string>
    <string name="seeprojects">See projects</string>
    <string name="projects">Projects</string>
    <string name="details">Details</string>
    <string name="seeinmaps">See in maps</string>
    <string name="projectnotfound">Project not found</string>
    <string name="indevelopment">In development</string>
    <string name="ended">Ended</string>
    <string name="open">Open</string>
    <string name="openmapintentmessage">This will open an external map app</string>
    <string name="externalmap">External map</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="removedcorrect">Removed correctly</string>
    <string name="delete">Delete</string>
    <string name="deletemessage">Do you want to delete it?</string>
    <string name="finished">Finished</string>
    <string name="nocompaniesfound">No companies found</string>
    <string name="password">Password</string>
    <string name="laspassword">Last password</string>
    <string name="newpassword">New password</string>
    <string name="settings">Settings</string>
    <string name="passwordchangedcorrectly">Password changed correctly</string>
    <string name="seedeleted">See deleted</string>
    <string name="logout">Log out</string>
    <string name="logoutmessage">Do you want to logout?</string>
    <string name="deletedusers">Deleted users</string>
    <string name="comaniesdelete">Deleted companies</string>
    <string name="description">Description</string>
    <string name="removedincorrect">The server could not remove it, please reload the page</string>
    <string name="errorserver">Can not connect to the server</string>
</resources>