<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_users"
        android:name="com.example.workmateadmin.ui.users.UsersFragment"
        android:label="@string/users"
        tools:layout="@layout/fragment_users" >
        <action
            android:id="@+id/action_navigation_users_to_userDataFragment"
            app:destination="@id/userDataFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.workmateadmin.ui.companies.CompaniesFragment"
        android:label="@string/companies"
        tools:layout="@layout/fragment_companies" >
        <action
            android:id="@+id/action_navigation_home_to_companyFragment"
            app:destination="@id/companyFragment" />
    </fragment>


    <fragment
        android:id="@+id/navigation_projects"
        android:name="com.example.workmateadmin.ui.projects.ProjectsFragment"
        android:label="@string/projects"
        tools:layout="@layout/fragment_projects" >
        <action
            android:id="@+id/action_navigation_projects_to_detailsProjectFragment"
            app:destination="@id/detailsProjectFragment" />
    </fragment>
    <fragment
        android:id="@+id/userDataFragment"
        android:name="com.example.workmateadmin.ui.users.UserDataFragment"
        android:label="@string/user"
        tools:layout="@layout/fragment_user_data" >
        <action
            android:id="@+id/action_userDataFragment_to_navigation_projects"
            app:destination="@id/navigation_projects" />
    </fragment>
    <fragment
        android:id="@+id/companyFragment"
        android:name="com.example.workmateadmin.ui.companies.CompanyFragment"
        android:label="@string/company"
        tools:layout="@layout/fragment_company" >
        <action
            android:id="@+id/action_companyFragment_to_companiesImagesFragment"
            app:destination="@id/companiesImagesFragment" />
        <action
            android:id="@+id/action_companyFragment_to_navigation_projects"
            app:destination="@id/navigation_projects" />
    </fragment>
    <fragment
        android:id="@+id/companiesImagesFragment"
        android:name="com.example.workmateadmin.ui.companies.CompaniesImagesFragment"
        android:label="@string/images"
        tools:layout="@layout/fragment_companies_images" />
    <fragment
        android:id="@+id/detailsProjectFragment"
        android:name="com.example.workmateadmin.ui.projects.DetailsProjectFragment"
        android:label="@string/details"
        tools:layout="@layout/fragment_details_project" >
        <action
            android:id="@+id/action_detailsProjectFragment_to_userDataFragment"
            app:destination="@id/userDataFragment" />
        <action
            android:id="@+id/action_detailsProjectFragment_to_companyFragment"
            app:destination="@id/companyFragment" />
    </fragment>
</navigation>