<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.companies.CompanyFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshCompanyProfile"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageViewCompanyLogoProfile"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/textViewCompanyNameProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/list_bg"
                    android:orientation="horizontal"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/id"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textViewCompanyNameIdProfile"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="TextView"
                        android:textAlignment="textEnd" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/list_bg"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/usernamecode"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textViewUsernamecodeCompanyProfile"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="viewEnd" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/list_bg"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/email"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textViewMailCompanyProfile"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="TextView"
                        android:textAlignment="viewEnd" />
                </LinearLayout>


                <Button
                    android:id="@+id/buttonSeeProjectsCompany"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/seeprojects"
                    android:textColor="@color/background" />

                <ImageButton
                    android:id="@+id/buttonSeeImagesCompanyFragment"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:background="@color/colorAccent"
                    android:src="@drawable/ic_baseline_image_24" />

                <ImageButton
                    android:id="@+id/buttonRemoveCompany"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:background="@color/red"
                    android:src="@drawable/ic_baseline_delete_24"
                    android:text="@string/remove" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</FrameLayout>