<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/dummy_bg"
                android:elevation="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:paddingLeft="5dp"
                    android:text="@string/password"
                    android:textSize="24sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout_old_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/laspassword"
                    android:paddingLeft="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextTextLastPassword"
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:layout_marginBottom="5dp"
                        android:background="@color/design_default_color_background"
                        android:ems="10"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/newpassword"
                    android:paddingLeft="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextTextNewPassword"
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:background="@color/design_default_color_background"
                        android:ems="10"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <ImageButton
                    android:id="@+id/imageButtonSavePaswordConfig"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/colorPrimary"
                    android:src="@drawable/ic_baseline_save_24" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonLogOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/red"
                android:drawableEnd="@drawable/ic_baseline_clear_24"
                android:paddingRight="5dp"
                android:text="@string/logout"
                android:textColor="@color/background" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>