<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.projects.DetailsProjectFragment">

    <ProgressBar
        android:id="@+id/progressBarLoadProjectDetails"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swiperefreshDetailsProyect"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.core.widget.NestedScrollView
                android:id="@+id/scrollViewContentProjectDetails"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewTitleProjectDetails"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="TextView"
                        android:textSize="24sp" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/linearLayout10"
                        android:layout_width="match_parent"
                        android:layout_height="30dp">

                        <ProgressBar
                            android:id="@+id/progressBarDetailsProject"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:progressTint="@color/blue"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:id="@+id/textViewProjectStateDetailsProject"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/list_bg"
                        android:gravity="center"
                        android:text="TextView" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/linearLayoutUserLayoutDetailsProject"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/imageViewUserImageProjectDetails"
                            android:layout_width="80dp"
                            android:layout_height="76dp"
                            app:layout_constraintBottom_toBottomOf="@+id/textViewUserNameProjectDetails"
                            app:layout_constraintEnd_toStartOf="@+id/textViewUserNameProjectDetails"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:src="@tools:sample/avatars" />

                        <TextView
                            android:id="@+id/textViewUserNameProjectDetails"
                            android:layout_width="0dp"
                            android:layout_height="80dp"
                            android:gravity="center"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageViewUserImageProjectDetails"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/linearLayout5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <HorizontalScrollView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:orientation="vertical">

                                <com.google.android.material.chip.ChipGroup
                                    android:id="@+id/chipGroupCategoriesDetailsProject"
                                    android:layout_width="match_parent"
                                    android:layout_height="40dp">

                                </com.google.android.material.chip.ChipGroup>
                            </LinearLayout>
                        </HorizontalScrollView>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/editTextTextTownDetailsProject"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10" />

                        <TextView
                            android:id="@+id/editTextTextProvinceDetailsProject"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10" />

                        <TextView
                            android:id="@+id/editTextTextAddressDetailsProject"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="10" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/buttonOpenInMapsDetailsProject"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorAccent"
                        android:text="@string/seeinmaps"
                        android:textColor="@color/background" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:text="@string/images"
                        android:textSize="24sp" />

                    <com.denzcoskun.imageslider.ImageSlider
                        android:id="@+id/galerySliderProject"
                        android:layout_width="match_parent"
                        android:layout_height="210dp"
                        app:iss_corner_radius="5"
                        app:iss_delay="0"
                        app:iss_period="1000"></com.denzcoskun.imageslider.ImageSlider>

                    <ImageButton
                        android:id="@+id/imageButtonSeeProjectGallery"
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:background="@color/colorAccent"
                        android:src="@drawable/ic_baseline_image_24" />

                    <TextView
                        android:id="@+id/editTextTextMultiLineDescriptionDetailsProject"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:ems="10"
                        android:gravity="start|top"
                        android:textSize="18sp" />

                    <com.google.android.material.chip.ChipGroup
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chipSquareMetersDetailsProject"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chipMaxBudgetDetailsProject"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </com.google.android.material.chip.ChipGroup>

                    <ImageButton
                        android:id="@+id/buttonProjectDetailsSeeCompanies"
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:layout_marginTop="20dp"
                        android:background="@color/colorAccent"
                        android:src="@drawable/ic_baseline_work_24"
                        android:textColor="@color/design_default_color_background" />
                    <ImageButton
                        android:id="@+id/buttonRemoveProject"
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:background="@color/red"
                        android:src="@drawable/ic_baseline_delete_24"
                        android:text="@string/remove" />

                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>